[package]
name = "adore"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["engine", "graph", "io", "dsp", "project", "ui"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.16"
crossbeam = "0.8"
ringbuf = "0.4.8"
jack = "0.13.3"
cpal = { version = "0.16"}
hound = "3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
egui = "0.32.1"
eframe = "0.32.1"